--- a/dz-17.ipynb
+++ b/dz-17.ipynb
@@ -11,19 +11,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11470 100000 0.1147 -27556\n"
+      "204534 1000000 0.204534 -93886\n"
      ]
     }
    ],
    "source": [
-    "trials = 100000    # Количество попыток\n",
+    "trials = 1000000    # Количество попыток\n",
     "successes = 0    # Количество успехов\n",
     "purse = 1    # кошелек\n",
     "\n",
@@ -33,28 +33,28 @@
     "    if random_score == 777:\n",
     "        successes += 1\n",
     "        purse += 200\n",
-    "    if random_score == 999:\n",
+    "    elif random_score == 999:\n",
     "        successes += 1\n",
     "        purse += 100\n",
-    "    if random_score == 555:\n",
+    "    elif random_score == 555:\n",
     "        successes += 1\n",
     "        purse += 50\n",
-    "    if random_score == 333:\n",
+    "    elif random_score == 333:\n",
     "        successes += 1\n",
     "        purse += 15\n",
-    "    if random_score == 111:\n",
+    "    elif random_score == 111:\n",
     "        successes += 1\n",
     "        purse += 10\n",
-    "    if random_score % 100 == 77:\n",
+    "    elif random_score % 100 == 77:\n",
     "        successes += 1\n",
     "        purse += 5\n",
-    "    if random_score % 10 == 7:\n",
+    "    elif random_score % 10 == 7:\n",
     "        successes += 1\n",
     "        purse += 3\n",
-    "    if random_score == '\\d00':\n",
+    "    elif random_score % 10 == 0:\n",
     "        successes += 1\n",
     "        purse += 2\n",
-    "    if random_score == '\\d{2}0':\n",
+    "    elif random_score %100 == 0:\n",
     "        successes += 1\n",
     "        purse += 1\n",
     "            \n",
